# AI-Powered-Applicant-Tracking-System-ATS-

./: README.md
Applicant-Tracker-AIzip/Applicant-Tracker-AIzip/: main.py  pyproject.toml
Applicant-Tracker-AIzip/Applicant-Tracker-AIzip/Applicant-Tracker-AI/: pyproject.toml
Applicant-Tracker-AIzip/Applicant-Tracker-AIzip/backend/: main.py
Applicant-Tracker-AIzip/Applicant-Tracker-AIzip/backend/core/: __init__.py  security.py
Applicant-Tracker-AIzip/Applicant-Tracker-AIzip/backend/database/: __init__.py  db.py  models.py  schemas.py
Applicant-Tracker-AIzip/Applicant-Tracker-AIzip/backend/routers/: applications.py  auth.py  jobs.py  match.py  resumes.py
Applicant-Tracker-AIzip/Applicant-Tracker-AIzip/backend/services/: ai_engine.py  matching_engine.py
Applicant-Tracker-AIzip/Applicant-Tracker-AIzip/backend/utils/: text_utils.py
Applicant-Tracker-AIzip/Applicant-Tracker-AIzip/frontend/: app.js  dashboard.html  index.html  styles.css
